Layout/GF/src/styles.css
/* ... */
/*Extra large devices (large desktops, 1200px and up)*/
@media (min-width: 1200px) {
    .navbar {
        padding: 20px 0;
    }

    .logo {
        max-width: 360px;
    }
}

/*Large devices(desktops, 992px and up)*/
@media (min-width: 1200px) and (max-width: 1300px) {
    .slide[_ngcontent-c3] span.star {
        font-size: 1.5rem !important;
    }
}

@media (max-width: 768px) {
    .flex-column-sm {
        -webkit-box-orient: vertical !important;
        -webkit-box-direction: normal !important;
        -ms-flex-direction: column !important;
        flex-direction: column !important;
    }

    .mb-2-md {
        margin-bottom: 2rem;
    }

    .mt-2-md {
        margin-top: 0.7rem;
    }

    .p-0-md {
        padding: 0px !important;
    }
}

@media (max-width: 576px) {
    .owl-prev,
    .owl-next {
        top: 20% !important;
    }
}
@media (max-width: 480px){
  .breadcrumbs ul li{
    font-size: 12px;
  }
  .grey-line .mat-checkbox-inner-container {
    margin-right: 3px;
  }
  .grey-line .mat-checkbox .mat-checkbox-label {
    font-size: 12px;
  }
}
@media (max-width: 375px) {
    #notify-method .mat-form-field-infix {
        padding: 6px 10px;
    }

    #notify-method .ng-star-inserted {
        font-size: 12px;
    }

    .mat-checkbox .mat-checkbox-label {
        line-height: 20px;
        font-size: 14px;
    }
}

